feature: add resize interface
